--- a/order-service/order-domain/order-domain-core/pom.xml
+++ b/order-service/order-domain/order-domain-core/pom.xml
@@ -15,6 +15,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>commom-domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
