--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <modules>
         <module>order-service</module>
+        <module>commom</module>
     </modules>
 
     <parent>
@@ -49,6 +50,11 @@
             <dependency>
                 <groupId>com.food.ordering.system</groupId>
                 <artifactId>order-messaging</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.food.ordering.system</groupId>
+                <artifactId>commom-domain</artifactId>
                 <version>${project.version}</version>
             </dependency>
         </dependencies>
