--- a/common/common-application/pom.xml
+++ b/common/common-application/pom.xml
@@ -9,7 +9,17 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.food.ordering.system</groupId>
-    <artifactId>common-domain</artifactId>
+    <artifactId>common-application</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
