--- a/order-service/order-domain/order-domain-core/pom.xml
+++ b/order-service/order-domain/order-domain-core/pom.xml
@@ -30,6 +30,10 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.food.ordering.system</groupId>
+            <artifactId>common-domain</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
