--- a/restaurant-service/restaurant-container/pom.xml
+++ b/restaurant-service/restaurant-container/pom.xml
@@ -2,31 +2,31 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
+        <artifactId>restaurant-service</artifactId>
         <groupId>com.food.ordering.system</groupId>
-        <artifactId>payment-service</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>payment-container</artifactId>
+    <artifactId>restaurant-container</artifactId>
 
     <dependencies>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
-            <artifactId>payment-domain-core</artifactId>
+            <artifactId>restaurant-domain-core</artifactId>
         </dependency>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
-            <artifactId>payment-application-service</artifactId>
+            <artifactId>restaurant-application-service</artifactId>
         </dependency>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
-            <artifactId>payment-dataaccess</artifactId>
+            <artifactId>restaurant-dataaccess</artifactId>
         </dependency>
         <dependency>
             <groupId>com.food.ordering.system</groupId>
-            <artifactId>payment-messaging</artifactId>
+            <artifactId>restaurant-messaging</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -41,7 +41,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <image>
-                        <name>${project.groupId}/payment.service:${project.version}</name>
+                        <name>${project.groupId}/restaurant.service:${project.version}</name>
                     </image>
                 </configuration>
                 <executions>
@@ -55,4 +55,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
